# BusterX

./: .gitignore  BUSTER++_SUMMARY_EN.md  BUSTER++_SUMMARY_RO.md  BUSTERX_KNOWLEDGE.md  README.md  WATERMARK_REMOVAL_PIPELINE.md  config.json  evaluate_batch.py  generation_config.json  implementation_ideas.md  preprocess_text_removal.py  pyproject.toml  remove_watermark_full.py  requirements.txt  run_full_evaluation.py  test_single_video.py  test_single_video_debug.py  test_single_video_h200.py
busterx_retrain/: README.md  __init__.py  evaluate.py  prepare_data.py  requirements.txt  reward_functions.py  train_dapo.py  train_sft.py
busterx_retrain/configs/: dapo_config.yaml  ds_config.json  sft_config.yaml
docs/: General analysis.xlsx
