[project]
name = "busterx-watermark-removal"
version = "0.1.0"
description = "Watermark removal tool for BusterX deepfake detection preprocessing"
requires-python = ">=3.9"
dependencies = [
    "easyocr>=1.7.0",
    "decord>=0.6.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pillow>=9.0.0,<10.0.0",
    "tqdm>=4.65.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[project.optional-dependencies]
lama = [
    "simple-lama-inpainting>=0.1.0",
]

[tool.uv]
# simple-lama-inpainting has strict pillow<10 requirement
# Install with: uv pip install simple-lama-inpainting --no-deps
